some final fixes

--- a/config/client.properties
+++ b/config/client.properties
@@ -1,5 +1,9 @@
+# Server's IP address and port
 client.serverAddress=localhost
 client.serverPort=8000
-client.filterPattern=.*i.*
-client.directory=C:\\Users\\hphel\\Desktop\\monitor
+# Regex pattern to filter properties keys on
+client.filterPattern=*
+# Paths should only be delimited by / characters
+client.directory=C:/Users/hphel/Desktop/monitor
+# How long to wait before attempting to re-connect to server
 client.connectionDelay = 2000
