--- a/config/server.properties
+++ b/config/server.properties
@@ -1,3 +1,6 @@
+# Port to listen on
 server.port = 8000
-server.directory = C:\\Users\\hphel\\Desktop\\place
+# Place files here. Only delimit using / characters
+server.directory = C:/Users/hphel/Desktop/place
+# How long to wait to re-open a socket
 server.retryPeriod = 2000
