--- a/config/client.properties
+++ b/config/client.properties
@@ -2,7 +2,7 @@
 client.serverAddress=localhost
 client.serverPort=8000
 # Regex pattern to filter properties keys on
-client.filterPattern=*
+client.filterPattern=.*
 # Paths should only be delimited by / characters
 client.directory=C:/Users/hphel/Desktop/monitor
 # How long to wait before attempting to re-connect to server
