add functionality to have multiple connections

--- a/config/client2.properties
+++ b/config/client2.properties
@@ -1,9 +1,9 @@
 # Server's IP address and port
 client.serverAddress=localhost
-client.serverPort=9900
+client.serverPort=9901
 # Regex pattern to filter properties keys on
-client.filterPattern=.*yie.*
+client.filterPattern=.*i.*
 # Paths should only be delimited by / characters
-client.directory=C:/Users/hphel/Desktop/monitor
+client.directory=C:/Users/hphel/Desktop/monitor_2
 # How long to wait before attempting to re-connect to server
 client.connectionDelay = 2000
